# alfred-admin

./: MANIFEST.in  README.md  pyproject.toml
alfred_admin/: hooks.py  modules.txt  test_admin_api.py
alfred_admin/alfred_portal/doctype/alfred_admin_settings/: alfred_admin_settings.json  alfred_admin_settings.py
alfred_admin/alfred_portal/doctype/alfred_customer/: alfred_customer.json  alfred_customer.py
alfred_admin/alfred_portal/doctype/alfred_plan/: alfred_plan.json  alfred_plan.py
alfred_admin/alfred_portal/doctype/alfred_plan_feature/: alfred_plan_feature.json  alfred_plan_feature.py
alfred_admin/alfred_portal/doctype/alfred_subscription/: alfred_subscription.json  alfred_subscription.py
alfred_admin/alfred_portal/doctype/alfred_usage_log/: alfred_usage_log.json  alfred_usage_log.py
alfred_admin/api/: billing.py  usage.py
