[project]
name = "alfred_admin"
authors = [
	{ name = "Venkatesh" },
]
description = "Admin portal for Alfred — customer management, billing, usage monitoring"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
license = { text = "MIT" }

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=17.0.0-dev,<18.0.0"
